[package]
name = "bevy-technical-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.8.0"
bevy-inspector-egui = { version = "0.12.1", optional = true }
tokio = { version = "1.20.1", features = ["full"] }
uuid = "1.1.2"

[features]
client = []
dynamic = ["bevy/dynamic"]
headless = []
editor = ["dep:bevy-inspector-egui"]
server = []
